--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,7 +6,7 @@
         "select-room": "Choose hospital clinic",
         "doctor": "Doctor",
         "select-doctor": "Choose a good doctor",
-        "fee": "Checkuo package",
+        "fee": "Checkup package",
         "check-health": "General helth check",
         "support": "Support"
     },
